--- a/LPProject2/DAO/DAL.csproj
+++ b/LPProject2/DAO/DAL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
     <ProjectReference Include="..\LPProject2\LPProject2.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
